fix double scrollbar

--- a/src/styles/routes/Home/_Home.scss
+++ b/src/styles/routes/Home/_Home.scss
@@ -1,8 +1,11 @@
 .list-container{
   display: flex;
   justify-content: space-between;
-  overflow: scroll;
+  overflow-x: scroll;
 }
 .page-home{
   background-color: $mainpage-bg;
+  .container-fluid{
+    padding-right: 0;
+  }
 }
